fix: adjusted spacing

--- a/style/destinations_page.css
+++ b/style/destinations_page.css
@@ -70,7 +70,7 @@
   font-weight: 700;
   line-height: normal;
   margin-top: 0.8rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
 }
 
 .card_description {
